matches tab now updates when clicked

--- a/www/templates/tenant.html
+++ b/www/templates/tenant.html
@@ -10,8 +10,8 @@
 		<ion-nav-view name="search-tab"></ion-nav-view>
 		</ion-tab>
 
-		<ion-tab title="Matches" icon="ion-person-stalker" ui-sref="tenant.matches" badge="" badge-style="badge-assertive">
-		<ion-nav-view name="matches-tab"></ion-nav-view>
+		<ion-tab title="Matches" icon="ion-person-stalker" ui-sref="tenant.matches">
+		<ion-nav-view name="matches-tab" ng-controller="TenantMatchesCtrl"></ion-nav-view>
 		</ion-tab>
 
     </ion-tabs>
