--- a/www/templates/tenant-landlord-profile.html
+++ b/www/templates/tenant-landlord-profile.html
@@ -1,9 +1,9 @@
 <ion-view view-title="Tenant Landlord Profile" name="tenant-landlord-profile">
   <ion-content class="padding">
         <div class="profile-card text-center">
-        <img class="img" src="/img/cover.jpg">
+        <img class="img" src="img/cover.jpg">
                 <div class="profile-info">
-                  <img class="profile-pic" src="/img/profile.jpg">
+                  <img class="profile-pic" src="img/profile.jpg">
                   <h2 class="hvr-underline-from-center">{{landlord.data.f_name}} {{landlord.data.l_name}}<span>{{landlord.data.email}}</span></h2>
                   <!-- above needs tweaking -->
                   <div>{{landlord.data.ph_no}}</div>
